# webread

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  HERMES.md  README.md
.github/workflows/: ci.yml  release.yml
master/.github/workflows/: ci.yml
scripts/: upload-workflows.sh
src/: lib.rs  main.rs
tests/: batch_summary_test.py  batch_test.py  batch_urls.txt  integration.rs  test_urls.txt
