[package]
name = "webread"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = "3"
scraper = "0.22"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
url = "2"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
